# open-midgard

./: .gitattributes  .gitignore  ANTI_ALIASING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PACKET_VERSION_ALIGNMENT.md  README.md  TODO.md  X64_MILESTONE.md  bootstrap_open_midgard_macos.sh  build.bat  build.sh  rAthena_OpenMidgard_patch.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: build-release-clients.yml
build-mingw-direct/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw-direct/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw-direct/licenses/qt/: COPYING.GPL-3.0.txt
build-mingw-direct/src/audio/: Makefile  cmake_install.cmake
build-mingw-direct/src/cipher/: Makefile  cmake_install.cmake
build-mingw-direct/src/core/: Makefile  cmake_install.cmake
build-mingw-direct/src/gamemode/: Makefile  cmake_install.cmake
build-mingw-direct/src/input/: Makefile  cmake_install.cmake
build-mingw-direct/src/item/: Makefile  cmake_install.cmake
build-mingw-direct/src/lua/: Makefile  cmake_install.cmake
build-mingw-direct/src/main/: Makefile  cmake_install.cmake
build-mingw-direct/src/network/: Makefile  cmake_install.cmake
build-mingw-direct/src/pathfinder/: Makefile  cmake_install.cmake
build-mingw-direct/src/qtui/: Makefile  cmake_install.cmake
build-mingw-direct/src/render/: Makefile  cmake_install.cmake
build-mingw-direct/src/render3d/: Makefile  cmake_install.cmake
build-mingw-direct/src/res/: Makefile  cmake_install.cmake
build-mingw-direct/src/security/: Makefile  cmake_install.cmake
build-mingw-direct/src/session/: Makefile  cmake_install.cmake
build-mingw-direct/src/skill/: Makefile  cmake_install.cmake
build-mingw-direct/src/ui/: Makefile  cmake_install.cmake
build-mingw-direct/src/world/: Makefile  cmake_install.cmake
build-mingw-preset/: CMakeCache.txt  Makefile  cmake_install.cmake  qt.conf
build-mingw-preset-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw-preset-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw-preset-debug/licenses/qt/: README.md  SOURCE_OFFER.txt
build-mingw-preset-debug/src/audio/: Makefile  cmake_install.cmake
build-mingw-preset-debug/src/cipher/: Makefile  cmake_install.cmake
build-mingw-preset-debug/src/core/: Makefile  (+1 more)
build-mingw-preset/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw-qt/: CMakeCache.txt
build-mingw-qt-ninja/: CMakeCache.txt
build-wsl-smoke/: CMakeCache.txt
cmake/: DeployQtRuntime.cmake  DeployVcpkgRuntime.cmake  QtSetup.cmake
cmake/vcpkg-triplets/: x64-mingw-dynamic.cmake
docs/: qt6_qml_migration_spike.md  qt_build_and_compliance.md
src/: DebugLog.h  Types.h
src/audio/: Audio.cpp  Audio.h
src/capture/: CMakeLists.txt  CaptureConfig.cpp  CaptureConfig.h  FrameCapture.cpp  FrameCapture.h  WebmRecorder.cpp  WebmRecorder.h  WebpEncoder.cpp  WebpEncoder.h
src/cipher/: CMakeLists.txt  Md5.cpp  Md5.h
src/core/: CMakeLists.txt  ClientFeature.cpp  ClientFeature.h  ClientInfoLocale.h  DllMgr.cpp  DllMgr.h  DllProtos.h  File.cpp  File.h  GPak.cpp  GPak.h  Globals.cpp  Globals.h  Locale.cpp  SettingsIni.cpp  SettingsIni.h
src/gamemode/: CMakeLists.txt  CursorRenderer.cpp  CursorRenderer.h  GameMode.cpp  GameMode.h  GameModePacket.cpp  GameModePacket.h  LoginMode.cpp  LoginMode.h  Mode.cpp  Mode.h  PacketPadding.h  View.cpp  View.h
src/input/: CMakeLists.txt  Gamepad.cpp  Gamepad.h  GamepadBindings.cpp  GamepadBindings.h  HotkeyBindings.cpp  HotkeyBindings.h  VirtualCursor.cpp  VirtualCursor.h
src/item/: Item.cpp  Item.h
src/lua/: CMakeLists.txt  LuaBridge.cpp  LuaBridge.h
src/main/: AppMain_stub.cpp  CMakeLists.txt  WinMain.cpp  WinMain.h
src/network/: CMakeLists.txt  Connection.cpp  Connection.h  GronPacket.cpp  GronPacket.h  MapSendProfile.cpp  MapSendProfile.h  Packet.h
src/platform/: WindowsCompat.h
src/qtui/: CMakeLists.txt  QtPlatformWindow.cpp  QtPlatformWindow.h  QtUiRuntime.h  QtUiSpikeAssets.qrc  QtUiSpikeBridge.cpp  QtUiSpikeBridge.h  QtUiSpikeState.h  QtUiState.h  QtUiStateAdapter.cpp  QtUiStateAdapter.h  QtUiStatusIconCatalog.h  QtUiTheme.cpp  QtUiTheme.h
src/qtui/qml/: GameOverlay.qml  SpikeOverlay.qml
src/render/: CMakeLists.txt  DC.cpp  DC.h  DrawUtil.cpp  DrawUtil.h  Renderer.cpp  Renderer.h
src/render3d/: CMakeLists.txt  D3dutil.cpp  D3dutil.h  Device.cpp  Device.h  Dx7Compat.h  GraphicsSettings.cpp  GraphicsSettings.h  ModernRenderState.cpp  ModernRenderState.h  RenderBackend.cpp  RenderBackend.h  RenderDevice.cpp  RenderDevice.h  RenderDevice_stub.cpp  VulkanFxaaShaders.generated.h  VulkanShaders.generated.h  VulkanSmaaShaders.generated.h
src/res/: Bitmap.cpp  Bitmap.h  Ijl.cpp  ImfRes.h  PaletteRes.h  Res.cpp  Res.h  Texture.cpp  Texture.h  WorldRes.cpp  WorldRes.h
src/session/: CMakeLists.txt  MapNameResolver.cpp  MapNameResolver.h  Session.cpp  Session.h  SkillActionInfo.cpp  SkillActionInfo.h  SkillActionInfo2.cpp  SkillActionInfo2.h
src/skill/: CMakeLists.txt  Skill.cpp  Skill.h  SkillEnumIdTable.inc
src/ui/: CMakeLists.txt  NpcDialogColoredText.cpp  NpcDialogColoredText.h  RoText.h  TextScale.cpp  TextScale.h  UIBasicInfoWnd.cpp  UIBasicInfoWnd.h  UICartWnd.cpp  UICartWnd.h  UIChooseSellBuyWnd.cpp  UIChooseSellBuyWnd.h  UIChooseWnd.cpp  UIChooseWnd.h  UIControllerWnd.cpp  UIControllerWnd.h  UIDealRequestAcceptWnd.cpp  UIDealRequestAcceptWnd.h  UIEggListWnd.cpp  UIEggListWnd.h  UIEmotionWnd.cpp  UIEmotionWnd.h  UIEquipWnd.cpp  UIEquipWnd.h  UIFrameWnd.cpp  UIFrameWnd.h  UIFriendRequestAcceptWnd.cpp  UIFriendRequestAcceptWnd.h  UIGuildWnd.cpp  UIGuildWnd.h  UIHomunInfoWnd.cpp  UIHomunInfoWnd.h  UIItemCollectionWnd.cpp  UIItemCollectionWnd.h  UIItemCompositionWnd.cpp  UIItemCompositionWnd.h  UIItemIdentifyWnd.cpp  UIItemIdentifyWnd.h  UIItemInfoWnd.cpp  UIItemInfoWnd.h  (+95 more)
src/world/: 3dActor.cpp  3dActor.h  CMakeLists.txt  GameActor.cpp  GameActor.h  MsgEffect.cpp  MsgEffect.h  RagEffect.cpp  RagEffect.h  World.cpp  World.h
tools/: build_qt_ui_spike.ps1  gen_skill_enum_table.py  update_vulkan_smaa_shaders.ps1
(+98 files in other folders)
